Change methods for ExpressionObject Update EquationObject for new ExpressionObject Add GenericUtils Add method in StringUtils Add Readme